Updated calendar link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         height: 100vh;
       }
       div.title {
-        font-size: 3rem;
+        font-size: 2rem;
         width: 70%;
       }
       .btn {
@@ -45,13 +45,12 @@
   </head>
   <body>
     <div class="title">
+      <p>“Mirror mirror on the wall, will I see my friends by fall?"</p>
       <p>
-        “Mirror mirror on the wall, will I see my friends by fall? After Covid I
-        do inquire, if they will meet me by the fire...”
-      </p>
-      <p>
-        <a class="btn" href="https://www.icloud.com/calendar/"
-          >Once you find the clue click here to view the calendar</a
+        <a
+          class="btn"
+          href="https://calendar.google.com/calendar/embed?src=unmqhm08c2mre8ssiooptkvjpg%40group.calendar.google.com&ctz=America%2FDenver"
+          >Click here to view pusheen's plans!</a
         >
       </p>
     </div>
