--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
         text-decoration: none;
         color: #fff;
 
-        border-radius: 20px;
         display: flex;
         overflow: hidden;
 
-        margin: 10px;
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        margin: auto;
         padding: 12px 12px;
 
+        align-items: center;
         text-align: center;
 
         cursor: pointer;
@@ -41,10 +44,18 @@
       .btn:hover {
         background-color: rgb(138, 2, 138);
       }
+      img {
+        display: flex;
+        margin: auto;
+      }
     </style>
   </head>
   <body>
     <div class="title">
+      <img
+        src="https://raw.githubusercontent.com/lhl/pusheen-stickers/master/gif/pusheen/144884865685780.gif"
+        alt=""
+      />
       <p>“Mirror mirror on the wall, will I see my friends by fall?"</p>
       <p>
         <a
